# py-agui

./: .env.sample  README.md  pyproject.toml
examples/: chat_with_state.py  chat_with_suggestions.py  screenshot_demo.py  simple_chat.py  three_pane_demo.py
py_agui/: __init__.py  core.py  layouts.py  patches.py  styles.py
